--- a/.env
+++ b/.env
@@ -25,8 +25,10 @@ APP_SECRET=919a7a48ba847d75837fbcf23ede1529
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+DATABASE_URL="mysql://root:root@localhost:3305/innovshop?serverVersion=8.4.0&charset=utf8mb4"
 
 ###> symfony/messenger ###
 # Choose one of the transports below
